[package]
name = "kindle_epub_converter"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
keywords = ["epub", "kindle", "sanitize", "ebook"]
readme = "README.md"
repository = "https://github.com/barun511/kindle-epub-converter/"
description = "Library to sanitize epubs for kindles"
authors = ["Barun Parruck <barun.parruck@gmail.com>"]
exclude = [".gitignore"]

[dependencies]
regex = "1.12.2"
scraper = "0.24.0"
zip = "6.0.0"
